--- a/_posts/2023-11-14-네이버-주식토론방-댓글-크롤링.md
+++ b/_posts/2023-11-14-네이버-주식토론방-댓글-크롤링.md
@@ -1262,6 +1262,9 @@ def max_page(webdriver):
 
 ## version 8 (Beautiful soap)
 Beautiful soap과 request를 이용해서 header를 조작하여 접근 및 크롤링 해보고 싶다는 생각이 들어 만들어 보았다.
+>추가사항 : pyinstaller로 exe파일 생성시 오류 발생
+fake_useragent의 문제
+
 <details><summary>Crawler_BS4.py</summary>
 <div markdown = "1">
 
