--- a/_posts/2023-11-14-네이버-주식토론방-댓글-크롤링.md
+++ b/_posts/2023-11-14-네이버-주식토론방-댓글-크롤링.md
@@ -1263,7 +1263,7 @@ def max_page(webdriver):
 ## version 8 (Beautiful soap)
 Beautiful soap과 request를 이용해서 header를 조작하여 접근 및 크롤링 해보고 싶다는 생각이 들어 만들어 보았다.
 >추가사항 : pyinstaller로 exe파일 생성시 오류 발생
-fake_useragent의 문제
+fake_useragent의 문제 (2023-11-22 해결 못함)
 
 <details><summary>Crawler_BS4.py</summary>
 <div markdown = "1">
@@ -1411,6 +1411,188 @@ def url_parser(min, max):
             url_per_page_url.append(n.a["href"])
 
     return url_per_page_url
+```
+
+</div>
+</details>
+
+### version 8-1 (Beautiful soap)
+하나의 파일로 묶어서 사용할 수 있게 함수처리 하였다.
+
+<details><summary>crawler_bs4.py</summary>
+<div markdown = "1">
+
+```python
+import os
+import requests
+from bs4 import BeautifulSoup as bs
+import url_parser as UP
+import time
+import pandas as pd
+import datetime
+from tqdm import tqdm
+import fake_useragent
+
+#정적 크롤러
+def CWBS(input_start, input_end, input_type):
+    start_page = int(input_start)
+    end_page = int(input_end)
+    save_type = int(input_type)
+
+    log_file_name = 'log.txt'
+    if os.path.isfile(log_file_name):
+        print("log 파일 존재")
+    else:
+        f = open("log.txt", 'w')
+        f.close()
+        print("로그파일 생성")
+
+
+    file = open("log.txt", "a", encoding="UTF-8")
+    file.write(f"\n---------------------------------\n 정적 크롤링 시작\n 시작 페이지: {start_page}, 마지막 페이지: {end_page}")
+    file.close()
+
+    start_time = time.time()
+    print("크롤링 url 시작")
+    crawling_url_list = UP.url_parser(start_page, end_page)
+    print("크롤링 url 생성")
+
+    date_list = []
+    title_list = []
+    comment_list = []
+    goodcnt_list = []
+    badcnt_list = []
+    url_list = []
+
+    print("데이터 수집 시작")
+    for url_p in tqdm(crawling_url_list):
+        user_agent = fake_useragent.UserAgent()
+        headers = {
+                'Referer': 'https://finance.naver.com/item/board.naver?code=005930',
+                'User-Agent': user_agent.random
+            }
+        url = "https://finance.naver.com" + url_p
+        response_url_html = requests.get(url=url, headers=headers)
+        url_html_text = response_url_html.text
+        html = bs(url_html_text, 'html.parser')
+
+        date = html.select_one('.gray03.p9.tah').text
+        comment_not_cleaned = html.select_one('.view_se').text
+        comment = comment_not_cleaned.replace("\n", "")
+        title_not_cleaned = html.select_one('.c.p15').text
+        title = title_not_cleaned.replace("#", "").replace("■", "").replace("[", "").replace("]", "")
+        goodcnt = html.select_one('.tah.p11.red01._goodCnt').text
+        badcnt = html.select_one('.tah.p11.blue01._badCnt').text
+
+
+        date_list.append(date)
+        comment_list.append(comment)
+        title_list.append(title)
+        goodcnt_list.append(goodcnt)
+        badcnt_list.append(badcnt)
+        url_list.append(url)
+
+    df = pd.DataFrame()
+    df['date'] = date_list
+    df['title'] = title_list
+    df['comment'] = comment_list
+    df['good'] = goodcnt_list
+    df['bad'] = badcnt_list
+    df['url'] = url_list
+
+    if(save_type == 1):
+        df.to_excel(f"data/{start_page}_to_{end_page}_bs.xlsx", index = False)
+    elif(save_type == 2):    
+        df.to_csv(f"data/{start_page}_to_{end_page}_bs.csv", index = False, sep='\t')
+    elif(save_type == 3):
+        df.to_csv(f"data/{start_page}_to_{end_page}_bs.txt", index = False, sep='\t')
+    else:
+        print("전부생성")
+        df.to_csv(f"data/{start_page}_to_{end_page}_bs.txt", index = False, sep='\t')
+        df.to_csv(f"data/{start_page}_to_{end_page}_bs.csv", index = False, sep='\t')
+        df.to_excel(f"data/{start_page}_to_{end_page}_bs.xlsx", index = False)
+    end_time = time.time()
+    sec = (end_time - start_time)
+    result_t = str(datetime.timedelta(seconds=sec)).split(".")
+    print(f"시간 : {result_t[0]}")
+    file = open("log.txt", "a", encoding="UTF-8")
+    file.write(f"걸린 시간 : {result_t[0]}")
+    file.close()
+```
+
+</div>
+</details>
+
+<details><summary>url_parser.py</summary>
+<div markdown = "1">
+
+```python
+import  requests
+from bs4 import BeautifulSoup as bs
+from tqdm import tqdm
+from fake_useragent import UserAgent
+ 
+def url_parser(min, max):
+    url_per_page_url = []
+    for t in tqdm(range(int(min), int(max + 1))):
+        url = f'https://finance.naver.com/item/board.naver?code=005930&page={t}'
+        user_agent = UserAgent()
+        if(t == 1):
+            headers = {
+                'User-Agent': user_agent.random
+            }
+        else:
+            headers = {
+                'Referer': f'https://finance.naver.com/item/board.naver?code=005930&page={t-1}',
+                'User-Agent' : user_agent.random
+                }
+        
+        response = requests.get(url = url, headers = headers)
+        #print(response) # 접속 확인 (200 = 성공)
+        html_text = response.text
+        html = bs(html_text, 'html.parser')
+        url_per_page = html.select('.title')
+        
+
+        for n in url_per_page:
+            url_per_page_url.append(n.a["href"])
+
+    return url_per_page_url
+```
+
+</div>
+</details>
+
+<details><summary>main.py</summary>
+<div markdown = "1">
+
+```python
+import crawler_bs4
+
+
+print("시작, 끝, 타입(excel, csv, txt), 스텝")
+start = int(input())
+end = int(input())
+type = int(input())
+step = int(input())
+
+
+total = end + 1 - start
+sep = int(total/step)
+
+time_list = []
+
+for i in range(start, end+1, step):
+    time_list.append(i)
+
+print(time_list)
+print(len(time_list))
+time_list_len = len(time_list)
+
+for i in range(0, time_list_len-1):
+    start_time = time_list[i]
+    end_time = time_list[i+1]
+    crawler_bs4.CWBS(start_time, end_time, type)
 ```
 
 </div>
