--- a/_posts/2023-11-14-네이버-주식토론방-댓글-크롤링.md
+++ b/_posts/2023-11-14-네이버-주식토론방-댓글-크롤링.md
@@ -1598,6 +1598,216 @@ for i in range(0, time_list_len-1):
 </div>
 </details>
 
+### version 8-2 (try except 예외처리)
+크롤링을 시작하자마자, 아래와 같이 NoneType 에러를 마주하였고 selenium을 이용할 때 문제가 생긴 것 처럼 try except문을 이용하여 예외처리하였다.
+
+또한 우리에게는 year, month, day만 필요하고 뒤에 나오는 시, 분, 초는 필요가 없기에 [:10]으로 뒤에부분을 잘랐다.
+
+2023-11-22<br/>
+엑셀 파일을 만들 때 특수문자로 인한 오류가 발생하기에 아래 구문을 이용하여 오류를 방지하였다.
+```python
+from openpyxl.cell.cell import ILLEGAL_CHARACTERS_RE
+```
+![그리고 문제 봉착](https://github.com/LMMYH/naverfinance_opinion_crawler/assets/103806022/a7db320c-88e0-40f6-bb02-15ef0ca36c97)
+
+<details><summary>main.py</summary>
+<div markdown = "1">
+
+```python
+import crawler_bs4
+
+
+print("시작, 끝, 타입(excel, csv, txt), 스텝")
+start = int(input()) #시작페이지
+end = int(input()) #끝 페이지
+type = int(input()) #타입 설정 엑셀, csv, 텍스트
+step = int(input()) #몇 페이지당 저장할 것인지 end와 start 값의 차이보다 작을것
+
+time_list = [] #몇 페이지에서 멈출지 리스트 선언
+
+#step 페이지마다 저장
+time_list.append(start)
+for i in range(start, end+1):
+    if(i%step == 0):
+        time_list.append(i)
+
+
+print(time_list) #디버깅
+#print(len(time_list)) #디버깅
+
+time_list_len = len(time_list) #리스트 길이 측정
+
+#리스트에 있는 요소값 만큼 페이지 크롤링, 타입 전해주기
+for i in range(0, time_list_len-1):
+    start_time = time_list[i]
+    end_time = time_list[i+1]
+    crawler_bs4.CWBS(start_time, end_time, type) #crawler_bs4파일의 CWBS함수에 전달
+```
+
+</div>
+</details>
+
+<details><summary>crawler_bs4.py</summary>
+<div markdown = "1">
+
+```python
+import os
+import requests
+from bs4 import BeautifulSoup as bs
+import url_parser as UP
+import time
+import pandas as pd
+import datetime
+from tqdm import tqdm
+import fake_useragent #pyinstaller 사용 불가 우씨...
+from openpyxl.cell.cell import ILLEGAL_CHARACTERS_RE
+
+#정적 크롤러
+def CWBS(input_start, input_end, input_type):
+    error_count = 0 #관리자 삭제 링크 수 세기
+    start_page = int(input_start) #첫 페이지
+    end_page = int(input_end) #끝 페이지
+    save_type = int(input_type) #저장 타입
+
+    #로그 파일 존재 확인
+    log_file_name = 'log.txt'
+    if os.path.isfile(log_file_name):
+        print("log 파일 존재")
+    else:
+        f = open("log.txt", 'w')
+        f.close()
+        print("로그파일 생성")
+
+    #크롤링 시작 log에 출력
+    file = open("log.txt", "a", encoding="UTF-8")
+    file.write(f"\n---------------------------------\n 정적 크롤링 시작\n 시작 페이지: {start_page}, 마지막 페이지: {end_page}\n")
+    file.close()
+
+    start_time = time.time()
+    print("크롤링 url 시작")
+    crawling_url_list = UP.url_parser(start_page, end_page)
+    print("크롤링 url 생성")
+
+    #필요 리스트
+    date_list = [] #날짜
+    title_list = [] #제목
+    comment_list = [] #본몬
+    goodcnt_list = [] #추천
+    badcnt_list = [] #비추천
+    url_list = [] #크롤링된 url
+
+    #크롤링 시작
+    print("데이터 수집 시작")
+    for url_p in tqdm(crawling_url_list):
+        try: #관리자 삭제 링크 생기면 except 실행 후 다음 링크 크롤링
+            user_agent = fake_useragent.UserAgent()
+            headers = {
+                    'Referer': 'https://finance.naver.com/item/board.naver?code=005930',
+                    'User-Agent': user_agent.random
+                }
+            url = "https://finance.naver.com" + url_p #링크에 item 뒷부분만 포함되어있기에 앞부분 추가
+            response_url_html = requests.get(url=url, headers=headers) #링크 요청
+            url_html_text = response_url_html.text #받은 json파일에서 text값만 추출
+            html = bs(url_html_text, 'html.parser') #html 파싱
+
+            #요소 접근
+            date = html.select_one('.gray03.p9.tah').text #날짜
+            comment_not_cleaned = html.select_one('.view_se').text #본문
+            comment = comment_not_cleaned.replace("\n", "") #본문에서 \n제거
+            comment = ILLEGAL_CHARACTERS_RE.sub(r'', comment)
+            title_not_cleaned = html.select_one('.c.p15').text #제목
+            title = title_not_cleaned.replace("#", "").replace("■", "").replace("[", "").replace("]", "") #제목에서 특수문자 제거
+            goodcnt = html.select_one('.tah.p11.red01._goodCnt').text #추천
+            badcnt = html.select_one('.tah.p11.blue01._badCnt').text #비추천
+
+            #크롤링한 요소 리스트에 담기
+            date_list.append(date[:10]) #year, month, day만 크롤링
+            comment_list.append(comment)
+            title_list.append(title)
+            goodcnt_list.append(goodcnt)
+            badcnt_list.append(badcnt)
+            url_list.append(url) #디버깅용 url
+        except:
+            error_count =+ 1
+
+    #dataframe 생성 후 크롤링 한 것들 전부 담기
+    df = pd.DataFrame()
+    df['date'] = date_list
+    df['title'] = title_list
+    df['comment'] = comment_list
+    df['good'] = goodcnt_list
+    df['bad'] = badcnt_list
+    df['url'] = url_list
+
+    #데이터프레임 저장
+    if(save_type == 1):
+        df.to_excel(f"data/{start_page}_to_{end_page}_bs.xlsx", index = False)
+    elif(save_type == 2):    
+        df.to_csv(f"data/{start_page}_to_{end_page}_bs.csv", index = False, sep='\t')
+    elif(save_type == 3):
+        df.to_csv(f"data/{start_page}_to_{end_page}_bs.txt", index = False, sep='\t')
+    else:
+        print("전부생성")
+        df.to_csv(f"data/{start_page}_to_{end_page}_bs.txt", index = False, sep='\t')
+        df.to_csv(f"data/{start_page}_to_{end_page}_bs.csv", index = False, sep='\t')
+        df.to_excel(f"data/{start_page}_to_{end_page}_bs.xlsx", index = False)
+    
+    #디버깅용 시간 체크
+    end_time = time.time()
+    sec = (end_time - start_time)
+    result_t = str(datetime.timedelta(seconds=sec)).split(".") #소수점 이후로 자르기
+    print(f"시간 : {result_t[0]}") #잘린 소수점은 [1]
+    file = open("log.txt", "a", encoding="UTF-8") #마무리 로그
+    file.write(f"걸린 시간 : {result_t[0]}, error_count : {error_count}")
+    file.close()
+```
+
+</div>
+</details>
+
+<details><summary>url_parser.py</summary>
+<div markdown = "1">
+
+```python
+import  requests
+from bs4 import BeautifulSoup as bs
+from tqdm import tqdm #현제 크롤링 상황 체크
+from fake_useragent import UserAgent
+ 
+def url_parser(min, max):
+
+    url_per_page_url = [] #페이지에서 필요한 url추출하여 저장할 리스트
+
+    #크롤러
+    for t in tqdm(range(int(min), int(max))):
+        url = f'https://finance.naver.com/item/board.naver?code=005930&page={t}'#접속 링크
+        user_agent = UserAgent()#fake_useragent함수, useragent 렌덤값 설정하기 위해 UserAgent()불러옴
+        if(t == 1): #1페이지는 참조할 필요 없음, 오히려 참조하면 접속 불가
+            headers = {
+                'User-Agent': user_agent.random #랜덤 agent 설정
+            }
+        else: #1페이지 이후 참조
+            headers = {
+                'Referer': f'https://finance.naver.com/item/board.naver?code=005930&page={t-1}', #Referer를 이용해서 다음 링크로 들어가기 전에 참조, 원래 100페이지 이후부터 참조 필요한데 굳이?
+                'User-Agent' : user_agent.random #랜덤 agent 설정
+                }
+        
+        response = requests.get(url = url, headers = headers) #url접속
+        #print(response) # 접속 확인 (200 = 성공)
+        html_text = response.text #response에서 html값 텍스트만 가져오기
+        html = bs(html_text, 'html.parser') #beautifulsoup로 HTML 문서를 파싱
+        url_per_page = html.select('.title') #파싱된 문서에서 .title 클래스 전부 찾기
+        
+        #.title 클래스에서 a.href 속성값만 추출
+        for n in url_per_page:
+            url_per_page_url.append(n.a["href"])
+
+    return url_per_page_url #추출한 링크 리스트 리턴
+```
+
+</div>
+</details>
+
 ## 버전이 추가되었다. (2023-11-22)
 * 셀레니움버전
 * beautiful soap 버전
@@ -1611,3 +1821,13 @@ for i in range(0, time_list_len-1):
 * [크롤링 전문가가 알려주는 ‘차단 우회 5가지 원칙’](https://blog.hashscraper.com/5-principles-for-bypassing-web-crawling-blocks/)
 *  [네이버 종목토론실 글 목록 수집해보기](https://icedhotchoco.tistory.com/entry/web-scraping-bionote)
 *  [Referer missing in HTTP header of Selenium request](https://stackoverflow.com/questions/54119674/referer-missing-in-http-header-of-selenium-request)
+*  [request.get과 request.GET의 차이가 뭘까?](https://velog.io/@dat0802/request.get%EA%B3%BC-request.GET%EC%9D%98-%EC%B0%A8%EC%9D%B4%EA%B0%80-%EB%AD%98%EA%B9%8C)
+*  [[Python 기능]openpyxl 사용법정리](https://velog.io/@tlsgn8483/Python-%EA%B8%B0%EB%8A%A5openpyxl-%EC%82%AC%EC%9A%A9%EB%B2%95%EC%A0%95%EB%A6%AC)
+*  [점프 투 파이썬 예외처리](https://wikidocs.net/30)
+*  [pyinstaller module not found fake_useragent](https://stackoverflow.com/questions/75754852/pyinstaller-module-not-found-fake-useragent)
+*  ['Connection aborted.', RemoteDisconnected('Remote end closed connection without response')](https://velog.io/@gjtang/Connection-aborted.-RemoteDisconnectedRemote-end-closed-connection-without-response)
+*  [Python 크롤링 에러 Connection aborted., RemoteDisconnected 해결방법 (feat. fake_useragent)](https://jsp-dev.tistory.com/395)
+*  [[Python] 파이썬 문자열 치환(replace, translate)](https://coding-factory.tistory.com/966)
+*  [[BeautifulSoup] 02~04. id class 속성/CSS/정규표현식을 이용하여 원하는 값 추출하기](https://data-soin.tistory.com/57)
+*  [BeautifulSoup 모듈 find와 select의 차이점 - 복잡한 웹을 간단하게](https://desarraigado.tistory.com/14)
+*  [tqdm 사용법 - python 진행률 프로세스바](https://skillmemory.tistory.com/entry/tqdm-%EC%82%AC%EC%9A%A9%EB%B2%95-python-%EC%A7%84%ED%96%89%EB%A5%A0-%ED%94%84%EB%A1%9C%EC%84%B8%EC%8A%A4%EB%B0%94)
