--- a/_posts/2023-11-29-ventoy-사용기.md
+++ b/_posts/2023-11-29-ventoy-사용기.md
@@ -1,5 +1,5 @@
 ---
-title: ventoy를 이요하여 여러 os를 사용해보자
+title: ventoy를 이용하여 여러 os를 사용해보자
 date: 2023-11-29 12:50:15 +09:00
 categories: [ventoy]
 tags: [ventoy, linux]
