--- a/_posts/2023-11-29-ventoy-사용기.md
+++ b/_posts/2023-11-29-ventoy-사용기.md
@@ -7,9 +7,9 @@ pin: true
 ---
 
 > 테스트 목록
-> * arch linux(persistence)
-> * kali linux(persistnece)
-> * ubuntu(persistence)
-> * hamonikr
-> * tails
-> * 테마 설정
+> * arch linux(persistence) -> 실패(usb에 통으로 설치)
+> * kali linux(persistnece) -> live boot persistence
+> * ubuntu(persistence) -> windows에 dualboot로 설치함
+> * hamonikr -> 해상도 2배 불가능
+> * tails -> persistence할 이유 없음
+> * grub theme -> [catppuccin](https://github.com/catppuccin/grub)의 moca 테마 사용
