--- a/_posts/2023-12-05-Vivado.md
+++ b/_posts/2023-12-05-Vivado.md
@@ -15,3 +15,5 @@ pin: true
 그리고 바로 다음 강의자료에서는 설치 버전이 2017이다... 음.. 이쯤되면 그냥 아무 버전이나 다운받으면 되는 것 같다..
 
 헌데.. 다운받으면 60기가의 용량을 차지한다고 한다. 그렇다면 우린 그냥 학교 노트북에 다운로드 되어있는 것을 쓰기로 하자 굳이 이것을 개인 노트북에 깔기는 좀...
+
+>알아보니 상관 없다고 한다.
