--- a/_posts/2023-11-14-네이버-주식토론방-댓글-크롤링.md
+++ b/_posts/2023-11-14-네이버-주식토론방-댓글-크롤링.md
@@ -1,8 +1,8 @@
 ---
 title: 네이버 종목토론방 크롤링 2
 date: 2023-11-22 21:22:15 +09:00
-categories: [크롤링, selenium, 크롤링, 성공]
-tags: [selenium, crawling]
+categories: [Beautiful soup, selenium, 크롤링, 성공]
+tags: [selenium,Beautiful soup, crawling]
 pin: true
 ---
  
