--- a/_posts/2023-11-14-네이버-주식토론방-댓글-크롤링.md
+++ b/_posts/2023-11-14-네이버-주식토론방-댓글-크롤링.md
@@ -5,7 +5,7 @@ categories: [Beautiful soup, selenium, 크롤링, 성공]
 tags: [selenium,Beautiful soup, crawling]
 pin: true
 ---
- 
+
 >대학 자연어처리 과제 준비중!<br/>
 >데이터 준비중
 
@@ -1882,6 +1882,8 @@ def date_fider(date):
 * beautiful soap 버전
 ### 페이지 찾기가 추가되었다. (2023-12-06)
 원하는 날짜를 입력하면 페이지를 찾아준다.
+### 날짜 기반 크롤러를 만들었다. (2023-12-11)
+[링크](https://oil-lamp-cat.github.io/posts/%EB%84%A4%EC%9D%B4%EB%B2%84-%EC%A3%BC%EC%8B%9D%ED%86%A0%EB%A1%A0%EB%B0%A9-%EB%8C%93%EA%B8%80-%ED%81%AC%EB%A1%A4%EB%A7%812/)
 
 
 ## 최종
