--- a/_posts/2023-11-15-Pyqt5-공부하기.md
+++ b/_posts/2023-11-15-Pyqt5-공부하기.md
@@ -1,7 +1,7 @@
 ---
 title: Pyqt5를 공부해보자!
 date: 2023-11-15 11:42:00 +09:00
-categories: [Pyqt5, 앱 만들기, 공부중]
+categories: [Pyqt5, 앱 만들기, 공부중, GUI, Python]
 tags: [Pyqt5, app, 기록중]
 pin: true
 ---
