시작 날리고
.

--- a/_posts/2023-12-13-PySide6를-공부해보자.md
+++ b/_posts/2023-12-13-PySide6를-공부해보자.md
@@ -6,46 +6,17 @@ tags: [Pyside6, app]
 pin: true
 ---
 
+# 고양이 프로젝트를 위해!
 
+pyqt와 pyside의 차이가 무엇인가?
 
-## 시작 (기본적인 프레임 만들기)
-pip를 이용해 설치
-```python
-pip install PySide6
-```
+Pyside6와 PyQt 모두 Qt를 활용한 툴이다.</br>
+GUI 개발에 사용되는 툴킷으로 많이 사용되고 있다. (나는 고양이 만들거지만)</br>
 
-제대로 깔렸는지 확인해 보기 위해 기본적인 몸통을 만들어보자
-```python
-from PySide6.QtWidgets import QApplication, QWidget
-import sys
+PySide6와 PyQt의 차이점이라고 한다면 PySide6는 [LGPL](https://sktelecom.github.io/guide/use/obligation/lgpl-3.0/) 라이선스를 가지고 있는 오픈소스라는 것이다!
 
-app = QApplication(sys.argv)
+하지만 PyQt는 [GPL](https://namu.wiki/w/GNU%20%EC%9D%BC%EB%B0%98%20%EA%B3%B5%EC%A4%91%20%EC%82%AC%EC%9A%A9%20%ED%97%88%EA%B0%80%EC%84%9C) 라이선스로 제한된 버전만 이용할 수 있다. (라고 해도 사실 지금으로써는 나에게 디메리트는 없다.)</br>
 
-window = QWidget()
-window.show()
-
-app.exec()
-```
-![스크린샷 2023-12-13 123231](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/0cbe5ab3-b54c-455b-bd34-6335f5dd620f)
-
-그렇다면 어떤 방식으로 작동을 하게 되는가?
-
-Pythonguis에 써있는 것을 내 식대로 풀어보자면, 윈도우 스크린을 만들기 전에 시작을 하게 되면 처음 설정을 받아서 Qt 세팅을 끝낸다.
-
-기본적인 코어는 Qt Applications의 QApplication 클래스 라고 한다. Applitcation은 딱 한번만 필요하고 그 객체는 상호작용에 따른 이벤트를 받아서 handler로 보내 작동하는 방식이라고 한다.
-
-![event-loop](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/4005da6d-0e05-4b98-9959-4806500f2342)
-출처 : [python GUI's](https://www.pythonguis.com/pyside6-tutorial/)
-
-app.exec은 프로그램을 종료하면 그에 프로그램을 끄는 장치이다. exec은 execute의 약자이며 종료시 0을 return한다.
-
-쉽게말해 아래와 같은 과정을 거치게 될 것이다.
-
-app생성</br>
--> app무한루프</br> 
--> 무한루프 탈출시 종료(sys.exit(app.exec()))
-
-* 참고 : [sys.argv 이야기]()
 
 ## 오브젝트(label) 생성하기
 윈도우에 이제 처음으로 label을 만들어서 글을 출력해보자
