--- a/_posts/2023-12-13-PySide6를-공부해보자.md
+++ b/_posts/2023-12-13-PySide6를-공부해보자.md
@@ -172,9 +172,11 @@ sys.exit(app.exec())
 ```
 
 ## 기록
-2023-12-13</br>
-[Creating your first app with PySide6](https://www.pythonguis.com/tutorials/pyside6-creating-your-first-window/) O</br>
-[PySide6 Signals, Slots & Events](https://www.pythonguis.com/tutorials/pyside6-signals-slots-events/) X</br>
+2023-12-13
+
+[Creating your first app with PySide6](https://www.pythonguis.com/tutorials/pyside6-creating-your-first-window/) O
+
+[PySide6 Signals, Slots & Events](https://www.pythonguis.com/tutorials/pyside6-signals-slots-events/) X
 
 
 
