--- a/_posts/2023-12-13-PySide6를-공부해보자.md
+++ b/_posts/2023-12-13-PySide6를-공부해보자.md
@@ -10,12 +10,13 @@ pin: true
 
 pyqt와 pyside의 차이가 무엇인가?
 
-Pyside6와 PyQt 모두 Qt를 활용한 툴이다.</br>
-GUI 개발에 사용되는 툴킷으로 많이 사용되고 있다. (나는 고양이 만들거지만)</br>
+Pyside6와 PyQt 모두 Qt를 활용한 툴이다.
+
+GUI 개발에 사용되는 툴킷으로 많이 사용되고 있다. (나는 고양이 만들거지만)
 
 PySide6와 PyQt의 차이점이라고 한다면 PySide6는 [LGPL](https://sktelecom.github.io/guide/use/obligation/lgpl-3.0/) 라이선스를 가지고 있는 오픈소스라는 것이다!
 
-하지만 PyQt는 [GPL](https://namu.wiki/w/GNU%20%EC%9D%BC%EB%B0%98%20%EA%B3%B5%EC%A4%91%20%EC%82%AC%EC%9A%A9%20%ED%97%88%EA%B0%80%EC%84%9C) 라이선스로 제한된 버전만 이용할 수 있다. (라고 해도 사실 지금으로써는 나에게 디메리트는 없다.)</br>
+하지만 PyQt는 [GPL](https://namu.wiki/w/GNU%20%EC%9D%BC%EB%B0%98%20%EA%B3%B5%EC%A4%91%20%EC%82%AC%EC%9A%A9%20%ED%97%88%EA%B0%80%EC%84%9C) 라이선스로 제한된 버전만 이용할 수 있다. (라고 해도 사실 지금으로써는 나에게 디메리트는 없다.)
 
 ## 시작 (기본적인 프레임 만들기)
 pip를 이용해 설치
