--- a/_posts/2023-12-29-html.md
+++ b/_posts/2023-12-29-html.md
@@ -2,11 +2,18 @@
 title: HTML 공부하기
 date: 2023-12-27 22:08:15 +09:00
 categories: [HTML, 공부중]
-tags: [부트캠프, 프론트엔드, 백엔드, html]
+tags: [부트캠프, 프론트엔드, html]
 pin: true
 ---
 
-# 기본 작업
+![html은 프로그래밍 언어가 아니야](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/26a2d048-f524-4231-bbd2-4ca4a3b77710)
+
+
+# HTML 이란?
+
+Hypertext Markup Language의 줄임말로 우리가 보는 웹페이지가 어떤 구조로 되어있는지 브라우저(Chrome, Edge, Brave, Firefox, Opera)가 알 수 있도록 해주는 마크업 언어이다.
+
+## 기본 작업
 
 vscode에서 index.html 기본 설정법 **!** 를 입력해서 아래와 같은 기본 세팅이 된다.
 ```html
@@ -22,3 +29,6 @@ vscode에서 index.html 기본 설정법 **!** 를 입력해서 아래와 같은
 </body>
 </html>
 ```
+
+### 공부 자료
+* [mdn web docs](https://developer.mozilla.org/ko/)
