--- a/_posts/2024-01-04-react-이야기.md
+++ b/_posts/2024-01-04-react-이야기.md
@@ -23,28 +23,41 @@ vscode의 cmd에서 아래 코드를 이용해 설치한다.
 - `yarn add -D prettier`
 - `yarn add -D tailwindcss postcss autoprefixer`
 - `yarn add react-router-dom`
+- `npx tailwindcss init -p`
 - `yarn dev`로 실행
 
 ![dev](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/d3b5a9c6-f23e-41ae-af55-96511a438bba)
 
 ## 파일에 관한 설명
 
-### **main.tsx 파일**
+### **main.tsx**
 
-![main_tsx](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/a5280421-ca67-4cab-b102-4966f6752359)
+main.tsx에서 \<App />을 ./App.tsx 파일에서 가져와 넣었다.
 
-### **index.html 파일**
+![main_tsx](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/afe02c2b-3a4e-4bf9-99d7-4d536ddd197d)
 
-![index_html](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/00deb37f-eee0-4861-adbe-fc707f333da4)
+### **index.html**
 
-### **app.css 파일**
+실제로 배포되는 코드
 
-![app_css](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/38a8e7d2-9769-4155-8283-c66c20ca516d)
+이 안에 /src/main.tsx를 모듈로 가져온 것이다.
 
-### **app.tsx 파일**
+![index_html](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/f54169b7-a9e3-4f4a-9bfd-e98dc04a6661)
 
-![app_tsx](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/3a5ffc29-403e-44f7-af1e-e2ad19322f9a)
+### **app.tsx**
 
-### **index.css 파일**
+./App.css에서 css를 가져오고 그 속성값을 이용해서 코드를 만든 후 main으로 보낸다.
 
-![index_css](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/fc4c8ce2-0baa-4de1-a322-d15b7e4fa548)
+![app_tsx](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/758f3013-65f4-421b-826f-b2be4213e100)
+
+### **app.css**
+
+app.tsx를 위한 css
+
+![app_css](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/3b634122-fe51-489e-ae43-b4aab8961a03)
+
+### **index.css**
+
+이것도 main을 위한 css
+
+![index_css](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/20ecd5b2-5779-43b0-8676-a0c907b2652b)
