--- a/_posts/2024-01-04-react-이야기.md
+++ b/_posts/2024-01-04-react-이야기.md
@@ -14,6 +14,8 @@ pin: true
 
 vscode의 cmd에서 아래 코드를 이용해 설치한다.
 
+> -D : 실제 서비스에서는 필요가 없고 개발 환경에서만 사용할 때 적용하는 코드
+
 - `npm install --global yarn vite`
 - `yarn create vite [프로젝트 이름] --template react-ts`
 - `cd [프로젝트 이름]`
@@ -27,6 +29,31 @@ vscode의 cmd에서 아래 코드를 이용해 설치한다.
 - `yarn dev`로 실행
 
 ![dev](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/d3b5a9c6-f23e-41ae-af55-96511a438bba)
+
+## 가져오기 방식
+
+```tsx
+import App from "./App.css";
+```
+
+```tsx
+const App = require("./App.css");
+```
+
+## useState()
+
+상태가 변할 때 다시 페이지를 로딩시켜주는 함수
+
+1. **count**는 현재 상태값을 저장하는 변수
+2. **setCount**는 상태값이 변경되면 갱신해줄 함수
+3. **useState**의 ()안에 있는 값은 초기화 값
+
+```tsx
+import React, { useState } from "react";
+
+const [상태, 상태변경함수] = useState(초깃값);
+const [count, setCount] = useState(0);
+```
 
 ## 파일에 관한 설명
 
@@ -61,3 +88,14 @@ app.tsx를 위한 css
 이것도 main을 위한 css
 
 ![index_css](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/20ecd5b2-5779-43b0-8676-a0c907b2652b)
+
+### 공부중
+
+[DH의 개발 공부로그](https://shape-coding.tistory.com/)
+최고
+
+[[React] React 개발환경 세팅하기 - React Router 설치 및 간단정리](https://shape-coding.tistory.com/entry/React-React-%EA%B0%9C%EB%B0%9C%ED%99%98%EA%B2%BD-%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0-React-Router-%EC%84%A4%EC%B9%98)
+[[React] 리액트에서 .env 환경변수 사용하기!](https://shape-coding.tistory.com/entry/React-%EB%A6%AC%EC%95%A1%ED%8A%B8%EC%97%90%EC%84%9C-env-%ED%99%98%EA%B2%BD%EB%B3%80%EC%88%98-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0)
+[[React] 😃 react-dom에 대해 이해하기](https://velog.io/@tngusglaso/React-react-dom%EC%97%90-%EB%8C%80%ED%95%B4-%EC%9D%B4%ED%95%B4%ED%95%98%EA%B8%B0)
+[[React] Vite 사용하기!](https://shape-coding.tistory.com/entry/React-Vite-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0)
+[[React] React 란?](https://shape-coding.tistory.com/entry/1-React-%EB%9E%80)
