--- a/_posts/2024-01-04-react-이야기.md
+++ b/_posts/2024-01-04-react-이야기.md
@@ -94,8 +94,14 @@ app.tsx를 위한 css
 [DH의 개발 공부로그](https://shape-coding.tistory.com/)
 최고
 
+[리액트 강의](https://ljh86029926.gitbook.io/coding-apple-react/)
+
 [[React] React 개발환경 세팅하기 - React Router 설치 및 간단정리](https://shape-coding.tistory.com/entry/React-React-%EA%B0%9C%EB%B0%9C%ED%99%98%EA%B2%BD-%EC%84%B8%ED%8C%85%ED%95%98%EA%B8%B0-React-Router-%EC%84%A4%EC%B9%98)
+
 [[React] 리액트에서 .env 환경변수 사용하기!](https://shape-coding.tistory.com/entry/React-%EB%A6%AC%EC%95%A1%ED%8A%B8%EC%97%90%EC%84%9C-env-%ED%99%98%EA%B2%BD%EB%B3%80%EC%88%98-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0)
+
 [[React] 😃 react-dom에 대해 이해하기](https://velog.io/@tngusglaso/React-react-dom%EC%97%90-%EB%8C%80%ED%95%B4-%EC%9D%B4%ED%95%B4%ED%95%98%EA%B8%B0)
+
 [[React] Vite 사용하기!](https://shape-coding.tistory.com/entry/React-Vite-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0)
+
 [[React] React 란?](https://shape-coding.tistory.com/entry/1-React-%EB%9E%80)
