--- a/_posts/2024-04-02-CCNA-공부.md
+++ b/_posts/2024-04-02-CCNA-공부.md
@@ -243,3 +243,12 @@ IPv6의 수는 최대 2^128개이다.
 
 ### HUB의 종류
  > Intelligent hub, Dummy hub, Semi-Intelligent hub
+
+### 인텔리전트 허브 (Intelligent hub)
+> 지능형 허브
+
+NMS(Network Management System)을 통해 데이터 분석, 제어 등 관리 가능
+
+문제가 발생한 PC가 연결된 포트를 자동으로 고립(네트워크에서 불리)시키는 기능을 가지고 있다.
+
+또한 분리된 포트는 허브에서 램프(LED)로 표시되기 떄문에 조치가 쉬워진다. (Auto Partition)
