--- a/_posts/2024-04-02-CCNA-공부.md
+++ b/_posts/2024-04-02-CCNA-공부.md
@@ -494,9 +494,9 @@ NMS(Network Management System)을 통해 데이터 분석, 제어 등 관리 가
 
 ### IP 클래스 정리
 
- - 클래스 A : 1~126 (127은 예비벊)
- - 클래스 B : 128~191
- - 클래스 C : 192~223
+ - 클래스 A : 1~126 (127은 예비번호), 255.0.0.0
+ - 클래스 B : 128~191, 255.255.0.0
+ - 클래스 C : 192~223, 255.255.255.0
  - 클래스 D : 224~239 (멀티캐스트용 주소)
  - 클래스 E : 240~255 (연구용 주소)
 
@@ -526,5 +526,159 @@ ex)
 
 - 서브넷 마스크는 이진수로 썼을 떄 `1`이 연속적으로 나와야 한다. 1과 1사이에 0이 있으면 안된다.
 
-1111 1111.1111 1111.1111 1111.1110 0000 -> 가능
+1111 1111.1111 1111.1111 1111.1110 0000 -> 가능 <br/>
 1111 1111.1111 1111.1111 1111.1011 0000 -> 불가능
+
+## 스패닝 트리 (Spanning Tree Protocol, SPT)
+
+ > 목적지가 2개 이상 존재할 때 1개의 경로만 남겨두고 나머지는 끊어두었다가 사용하던 경로에 문제가 생기면 다른 하나를 사용하는 방법
+
+ ### 브리지 ID (BID)
+
+ Bridge ID 는 총 64비트(8Byte)로 이루어저 있고 그 중 앞의 16비트(2Byte)는 `Bridge Priority`, 나머지 48비트(6Byte)는 `Mac Address`로 구성되어있다.
+
+ > `xxxx xxxx xxxx xxxx` oooo oooo oooo oooo oooo oooo oooo oooo oooo oooo oooo oooo
+
+ 그 중 `Bridge Priority`는 2^16 - 1 가지가 올 수 있으며 디폴트 값은 중간 값인 32768(16 진수로는 8000)을 사용한다. `Mac Address`는 앞과 마찬가지로 고정된 값이다.
+
+ > Priority는 낮은 값이 더 높은 우선순위를 갖는다.
+ 
+ ### Path Cost
+
+ > 브리지가 얼마나 가까이, 빠른 링크로 연결되어있는지 알아내기 위한 값이다
+
+ 원래 계산법은 1000Mbps를 연결되어있는 링크 대역폭으로 나눈 값이다
+
+ 예를들어 10Mbps로 연결되어있는 두 스위치라면 Path cost는  100이다
+
+ 차지만 요즘은 속도가 더 빨라졌기 때문에 소수점까지 값이 내려가는 것을 방지하기 위해 값을 고정시켜 놓았다.
+ 
+ |Bandwidth(대역폭)|STP Cost(path Cost)|
+ |:---:|:---:|
+ |4Mbps|250|
+ |10Mbps|100|
+ |16Mbps|62|
+ |45Mbps|39|
+ |100Mbps|19|
+ |155Mbps|14|
+ |622Mbps|6|
+ |1Gbps|4|
+ |100Gbps|2|
+
+ ### 스패닝 트리 프로토콜
+
+ > 1. 네트워크당 하나(브로드캐스트 도메인)의 루트 브리지(Root Bridge)를 가진다
+ > 2. 루트 브리지가 아닌 나머지 모든 브리지(Non Root Bridge)는 무조건 하나씩의 루트 포트(Root Port)를 가진다
+ > 3. 세그먼트(Segment)당 하나씩의 데지그네이티드 포드(Designated Port)를 갖는다
+
+#### Root Bridge?
+
+ 스패닝 트리 프로토콜을 수행할 때 기준이 되는 브리지(혹은 스위치)
+
+#### Non Root Bridge?
+
+ 루트 브리지를 제외한 모든 브리지(스위치), 무조건 하나씩의 `루트 포트`즉 루트 브리지까지 가장 빨리 갈 수 있는 포트를 가진다
+
+#### Segment?
+
+ 브리지(스위치) 사이에 서로 연결된 링크
+
+ 세그먼트당 하나씩의 지정포트(Designated Port)를 갖는다
+
+ ![스패닝트리 프로토콜](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/e7888ee0-3ba5-46cf-84a4-33f3e0a05217)
+
+스패닝트리 프로토콜에서 루트 포트나 지정포트가 아닌 나머지 모든 포트는 막아버린다
+
+### STP에서의 순서
+
+ > 1. 누가 더 작은 Root BID를 가졌는가?
+ > 2. 루트 브리지까지의 Path Cost 값은 누가 더 작은가?
+ > 3. 누구의 BID(Sender BID)가 더 낮은가?
+ > 4. 누구의 포트 ID가 더 낮은가?
+ 
+ 브리지(스위치)는 스패닝 트리 정보를 주고받기 위해 매 2초 간격으로 `BPDU(Bridge Protocol Data Unit)`을 뿌리고 이를 통해 포트를 결정하게 된다
+
+ BPDU 안에는 `Root BID`, `Root Path Cost`, `Sender Bid`, `Port ID`를 담고있다
+
+ 루트 포트 -> Designated Port -> Non Designated Port
+
+### 실제 스위치에서 값 변경, 확인하기
+
+```
+sw(config)#spanning-tree vlan 1 priority 100
+
+sw(config)#show spanning-tree
+```
+
+추후 전체적인 실습 기록할 떄 없어질 수도
+
+### STP에서 루트 포트 선출하기
+
+ > Path Cost가 가장 적게 드는 포트가 가장 루트 포트에 가까이 있다는 의미
+
+ ![루트 브리지 선출](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/e4bc62f1-0fdc-4a01-8b55-84872a6d88c7)
+
+ 위 예시에서 스위치 A는 루트 브리지, 스위치 B의 E0와 스위치 C의 E0가 루트 포트이다
+
+### STP에서 Designated Port 선출하기
+
+ > 세그먼트 상에서 Root Path Cost를 서로 비교해서 더 작은 Root Path Cost를 가진 포트가 Designated Port로 선출된다
+
+ ![Designated Port](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/d932775c-dd49-49d2-b87d-3856578f104f)
+
+ 위 예시에서는 세그먼트 1에서는 스위치 A의 E0, 세그먼트 2에서는 스위치 A의 E1이 Designated Port가 된다
+
+ - 루트 브리지의 모든 포트들은 언제나 Designated Port로 선정
+
+ 세그먼트 3에서는 Root Path Cost값이 같기에 위의 4단계를 통해 결정하게 된다
+
+ 책의 예시에서는 Sender BID, 즉 자신의 BID값이 더 작은 B의 E1이 Designated Port로 선정되었다
+
+ 그리고 나머지 포트 (여기서는 스위치 C의 E1)은 `ND(Non Designated Port)`가 된다
+
+ ![STP 결과](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/b0e6dcb8-4f62-403f-97c6-93bfdf36a3dd)
+
+
+ ### STP에서 스위치 포트의 5가지 상태변화
+
+ #### Disabled
+
+ 고장나서 사용 불가이거나 일부러 정지시켜 놓은 상태
+
+ - 데이터 전송 불가
+ - MAC Address Learning 불가
+ - BPDU 송신 및 수신 불가
+
+ #### Blocking
+
+ 맨 처음 켜지거나 Disable상태에서 활성화 시켰을 때
+
+ - 데이터 전송 불가
+ - MAC Address Learning 불가
+ - BPDU 송신 및 수신 가능
+
+ #### Listening
+
+ Blocking 상태에 있던 포트가 루트 포트나 Designated Port로 선정되면 Listening 상태로 변경, 하지만 다른 포트로 상태가 변하면 다시 Blocking 상태가 된다
+
+ - 데이터 전송 불가
+ - MAC Address Learning 불가
+ - BPDU 송신 및 수신 가능
+
+ #### Learning
+
+ Listening 상태에 있던 포트가 포워딩 딜레이(Forwarding Delay) 디폴트 시간인 15초 동안 유지되면 러닝 상태로 변경, 이제야 MAC Address 테이블을 만들기 시작
+
+ - 데이터 전송 불가
+ - MAC Address Learning 가능
+ - BPDU 송신 및 수신 가능
+
+ #### Forwarding
+
+ Learning 상태에서 변하지 않고 포워딩 딜레이 디폴트 시간인 15초 동안 유지되면 포워딩 상태로 변경
+
+ - 데이터 전송 가능
+ - MAC Address Learning 가능
+ - BPDU 송신 및 수신 가능
+
+ <img src = "https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/8f48c018-6da3-41e5-b4c9-42c912b840a5" width="75%" height="75%">
