Img 태그에 alt없어서 생긴 오류
밥 먹고싶어요

--- a/_posts/2024-04-02-CCNA-공부.md
+++ b/_posts/2024-04-02-CCNA-공부.md
@@ -681,4 +681,4 @@ sw(config)#show spanning-tree
  - MAC Address Learning 가능
  - BPDU 송신 및 수신 가능
 
- <img src = "https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/8f48c018-6da3-41e5-b4c9-42c912b840a5" width="75%" height="75%">
+ <img src = "https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/8f48c018-6da3-41e5-b4c9-42c912b840a5" alt = "SPT 포트 선정" width="75%" height="75%">
