--- a/_posts/2024-04-02-CCNA-공부.md
+++ b/_posts/2024-04-02-CCNA-공부.md
@@ -1670,3 +1670,235 @@ Switch#
  ```
 
  잘 바뀌었네요!
+
+ ### VLAN 마지막 예시 따라해보기!
+
+ ![VLAN 마지막](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/6786546b-222f-48a1-a2ff-10ff0e8af86d)
+
+ 위 사진과 같이 세팅을 하러 가봅시다!
+
+ (아직 위 사진의 PC0은 스위치의 Fa0/5포트에, PC1은 스위치의 Fa0/3포트에 연결되어있다)
+
+ 스위치의 구성모드로 들어가서 스위치의 이름`Cat2950`과 패스워드`cisco`를 세팅해 봅시다
+
+ ```
+Switch>enable
+Switch#configure terminal
+Enter configuration commands, one per line.  End with CNTL/Z.
+Switch(config)#host
+% Incomplete command.
+Switch(config)#hostname Cat2950
+Cat2950(config)#enable password cisco
+Cat2950(config)#^Z
+Cat2950#
+ ```
+
+ 다음으로 스위치 VLAN 1에 IP주소를 `10.10.10.2`로 설정하고 디폴트 게이트웨이도 `10.10.10.1`로 설정합시다
+
+ ```
+Cat2950#configure terminal
+Enter configuration commands, one per line.  End with CNTL/Z.
+Cat2950(config)#interface vlan 1
+Cat2950(config-if)#ip address 10.10.10.2 255.255.255.0
+Cat2950(config-if)#exit
+Cat2950(config)#ip default-gateway 10.10.10.1
+Cat2950(config)#^Z
+Cat2950#
+ ```
+
+ 이번에는 VTP 모드를 세팅해 봅시다, 트랜스페어런트 모드로 말이죠
+
+ ```
+Cat2950#configure terminal
+Enter configuration commands, one per line.  End with CNTL/Z.
+Cat2950(config)#vtp mode transparent
+Setting device to VTP TRANSPARENT mode.
+Cat2950(config)#vtp domain cisco
+Changing VTP domain name from NULL to cisco
+Cat2950(config)#^Z
+Cat2950#
+ ```
+
+ 그 후 확인을 해보면
+
+ ```
+Cat2950#show vtp status
+VTP Version                     : 1
+Configuration Revision          : 0
+Maximum VLANs supported locally : 255
+Number of existing VLANs        : 5
+VTP Operating Mode              : Transparent -> 요기
+VTP Domain Name                 : cisco -> 요기
+VTP Pruning Mode                : Disabled
+VTP V2 Mode                     : Disabled
+VTP Traps Generation            : Disabled
+MD5 digest                      : 0xAA 0xB9 0x0C 0xCD 0xD7 0xE8 0xA6 0xE0 
+Configuration last modified by 0.0.0.0 at 0-0-00 00:00:00
+Cat2950#
+ ```
+
+ 표시한 곳이 제대로 변경 되었는지 확인 할 수 있습니다
+
+ 이제는 디폴트로 만들어져있는 VLAN 1을 두고 VLAN 2를 만들어 봅시다
+
+ ```
+Cat2950#configure terminal
+Enter configuration commands, one per line.  End with CNTL/Z.
+Cat2950(config)#vlan 2
+Cat2950(config-vlan)#name CCNA
+Cat2950(config-vlan)#^Z
+Cat2950#
+ ```
+
+ 그 후 트렁크 포트를 설정해 봅시다
+
+ 포트 Fa0/0을 트렁크로 세팅하고 모드는 IEEE 802.1Q로 세팅해 봅시다
+
+ ```
+Cat2950#configure terminal
+Enter configuration commands, one per line.  End with CNTL/Z.
+Cat2950(config)#interface fa0/1
+Cat2950(config-if)#switchport mode trunk
+Cat2950(config-if)#switchport trunk allowed vlan all
+Cat2950(config-if)#^Z
+Cat2950#
+ ```
+
+ 위 설정에서 모드를 trunk 로만 잡았는데 책에서 말하길 Catalyst 2950은 IEEE 802.1Q만 지원되기에 따로 선택하지 않았다고 하네요
+
+ 이제 포트를 VLAN에 배치해 봅시다
+
+ VLAN 1에 Fa0/3 포트를 VLAN 2에 Fa0/5번 포트를 배치해 줍시다
+
+ 라고 해도 VLAN 1은 디폴트 VLAN에 속해있기에 VLAN 2만 설정해 주면 된답니다
+
+ ```
+Cat2950#configure terminal
+Enter configuration commands, one per line.  End with CNTL/Z.
+Cat2950(config)#interface fa0/5
+Cat2950(config-if)#switchport access vlan2 -> 뜨어쓰기 조심...
+                                         ^
+% Invalid input detected at '^' marker.
+	
+Cat2950(config-if)#switchport access vlan 2
+Cat2950(config-if)#^Z
+Cat2950#
+ ```
+
+ 어.. 아직은 스위치를 다루는 것 밖에 하지 않았는데 라우터의 구성도 들어가게 되네요 한번 해봅시다
+
+ 이번에는 VLAN을 활용하기 위해 라우터에서 서브 인터페이스를 사용하게 되는데 스위치 포트에서 라우터로 들어가게 되는 길이 현재 하나 이지만 하나의 인터페이스를 여러개의 서브 인터페이스로 분리하여 사용할 수 있다고 하네요
+
+ 이 부분을 더 자세하게 하려면 라우터 부분을 들어가야겠습니다
+
+ 일단 해보죠
+
+ 라우터의 이름과 비밀번호 지정하기 
+
+```
+Router#configure terminal
+Enter configuration commands, one per line.  End with CNTL/Z.
+Router(config)#hostname Router01
+Router01(config)#enable password cisco
+Router01(config)#^Z
+Router01#
+```
+
+스위치랑 매우 유사하네요
+
+헌데 위 사진에서 보이듯 붉은 세모 표시가 뜨며 연결이 안 되어있죠 그 이유는 스위치와 라우터를 연결한 Fa0/0이 디폴트로 `shutdown`되어있기에 `no shutdown`명령어로 살린 뒤 아까 설명한 서브 인터페이스를 만들고 VLAN을 지정해 주면 된다고 해요
+
+```
+Router01#configure terminal
+Enter configuration commands, one per line.  End with CNTL/Z.
+Router01(config)#interface fa0/0
+Router01(config-if)#no shutdown
+
+Router01(config-if)#
+%LINK-5-CHANGED: Interface FastEthernet0/0, changed state to up
+
+%LINEPROTO-5-UPDOWN: Line protocol on Interface FastEthernet0/0, changed state to up
+
+Router01(config-if)#exit
+Router01(config)#
+```
+
+![라우터가 살아났다](https://github.com/oil-lamp-cat/oil-lamp-cat.github.io/assets/103806022/0691eab9-708f-4887-b714-4c508428f879)
+
+오오 정말로 라우터 통신이 살아났네요!
+
+이제 서브 인터페이스를 만들고 VLAN 세팅을 해줍시다
+
+```
+Router01(config)#interface fastEthernet 0/0.1
+Router01(config-subif)#
+%LINK-5-CHANGED: Interface FastEthernet0/0.1, changed state to up
+
+%LINEPROTO-5-UPDOWN: Line protocol on Interface FastEthernet0/0.1, changed state to up
+
+Router01(config-subif)#encapsulation dot1Q 1 native
+Router01(config-subif)#ip address 10.10.10.1 255.255.255.0
+Router01(config-subif)#exit
+Router01(config)#
+```
+
+하나
+
+```
+Router01(config)#interface fastEthernet 0/0.2
+Router01(config-subif)#
+%LINK-5-CHANGED: Interface FastEthernet0/0.2, changed state to up
+
+%LINEPROTO-5-UPDOWN: Line protocol on Interface FastEthernet0/0.2, changed state to up
+
+Router01(config-subif)#encapsulation dot1Q 2
+Router01(config-subif)#ip address 10.10.11.1 255.255.255.0
+Router01(config-subif)#^Z
+Router01#
+%SYS-5-CONFIG_I: Configured from console by console
+
+Router01#
+```
+
+ 둘 모두 연결 했습니다
+
+ 이렇게 라우터 구성은 끝났고 ping을 사용해 확인해 봅시다 통신이 되는지!
+
+ 생각해보니 PC ip 설정을 안했더군요
+
+ - PC 0
+
+ ipv4 : 200.200.200.1
+
+ subnet mask : 255.255.255.0
+
+ - PC 1
+
+ ipv4 : 200.200.200.2
+
+ subnet mask : 255.255.255.0
+
+ ```
+C:\>ping 200.200.200.2
+
+Pinging 200.200.200.2 with 32 bytes of data:
+
+Reply from 200.200.200.2: bytes=32 time<1ms TTL=128
+Reply from 200.200.200.2: bytes=32 time<1ms TTL=128
+Reply from 200.200.200.2: bytes=32 time<1ms TTL=128
+Reply from 200.200.200.2: bytes=32 time=1ms TTL=128
+
+Ping statistics for 200.200.200.2:
+    Packets: Sent = 4, Received = 4, Lost = 0 (0% loss),
+Approximate round trip times in milli-seconds:
+    Minimum = 0ms, Maximum = 1ms, Average = 0ms
+
+C:\>
+ ```
+
+ 오오오 성공 했네요
+
+ 이제 드디어 라우터로 넘어가 봅시다
+
+
+ ## 라우터
