--- a/_posts/2024-03-29-자격증-목표.md
+++ b/_posts/2024-03-29-자격증-목표.md
@@ -3,6 +3,7 @@ title: "자격증을 따보도록 하자"
 date: 2024-03-29 21:09:15 +09:00
 categories: [자격증 ,Linux, 리눅스]
 tags: [노력]
+pin: true
 ---
 
 - CCNA (일단 여기부터 차근차근 도전해 보자)
