저녁밥 먹기 전 until 반복문까지 기록
배고파용

--- a/_posts/2024-04-02-CCNA-공부-1.md
+++ b/_posts/2024-04-02-CCNA-공부-1.md
@@ -1,8 +1,8 @@
 ---
-title: "CCNA 공부를 위해"
+title: "CCNA 공부를 위해 - 네트워크 기초 부터 스위치까지"
 date: 2024-04-02 21:09:15 +09:00
 categories: [CCNA]
-tags: [노력]
+tags: [노력, 스위치, 네트워크]
 pin: true
 ---
 
@@ -1899,7 +1899,8 @@ C:\>
 
  오오오 성공 했네요
 
- 이제 드디어 라우터로 넘어가 봅시다
+ 이제 드디어 라우터로 넘어가 봅시다 
 
+ ---
 
- ## 라우터~
+ 라우터 부터는 다음 페이지로
